--- a/DB_links/links/app/scss/style.css
+++ b/DB_links/links/app/scss/style.css
@@ -144,12 +144,12 @@ a.featured,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  max-width: 30rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 25rem;
   margin: 0 auto;
-  padding: 0.35rem 3rem 2rem 3rem;
+  padding: 0.35rem 0.25rem 2rem 0.25rem;
 }
 
 .channels__link {
